Make map in `FallingBlockEntityMixin` fully immutable
and extract `World` to local variable in its `onTick` method